# Minor

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
client_source/: CMakeLists.txt
client_source/source/: main.cpp
server_source/: CMakeLists.txt
server_source/source/: def.hpp  main.cpp  utilities.hpp
server_source/source/database_schemas/: users.sql
server_source/source/request_handler/: request_handler.cpp  request_handler.hpp
server_source/source/request_handler/accounting/: accounting.cpp  accounting.hpp
server_source/source/request_handler/accounting/database/: database.cpp  database.hpp  utilities.cpp
server_source/source/request_handler/user/: user.cpp  user.hpp
server_source/source/server/: server.cpp  server.hpp  server_callbacks.cpp
source/: def.hpp  main.cpp  utilities.hpp
source/server/: server.cpp  server.hpp  server_callbacks.cpp
